<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "UCLaConcentration"><!ENTITY author "G11">]>

<resources>
    <string name="description">The &appname; app was created by &author;</string>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="StartTime">The &appname; app was created by &author;</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="title_activity_store">Store</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="back">Back</string>
    <string name="NoNetworkConnection">No network connection available.</string>
    <string name="Initcalendar">Initialise calendar</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pause" translatable="false">Pause</string>
    <string name="pausing_chrono" translatable="false">Timer on pause</string>
    <string name="resuming_chrono" translatable="false">Resume Timer</string>
    <string name="no_timer_active">No timer running</string>
    <string name="resume" translatable="false">Resume</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="newEvent">New Event</string>
    <string name="pause_timer" translatable="false">Pause : </string>
    <string name="end_pause" translatable="false"> Pause time out</string>
    <string name="coin_name" translatable="false">ProcrastinaCoins</string>
    <string name="timer_timer" translatable="false">Timer : </string>
    <string name="serie20">Serie : 20 min  </string>
    <string name="serie40">Serie : 40 min  </string>
    <string name="serie60">Serie : 60 min  </string>
    <string name="title_activity_ade" translatable="false">ADE</string>
    <string name="title_activity_prefs">Preferences</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_codes_cours">Courses codes :</string>
    <string name="avertissement_pas_de_cours">You don\'t have any courses registered. Go to the settings to check it.</string>
    <string name="facebook_app_id" translatable="false">484334098622413</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_param">Welcome to the jungle</string>
    <string name="already_param">You already are in the settings</string>
    <string name="sport_level">Sport level</string>
    <string name="complete_info">Please complete the informations</string>
    <string name="event_add">Event added</string>
    <string name="select_time">Select time</string>

    <string name="content">Description</string>
    <string name="list_event">List of events</string>
    <string name="add_event">Add an event </string>
    <string name="date">Date</string>
    <string name="end_time">Ending time</string>
    <string name="start_time">Starting time</string>
    <string name="name">Nom</string>

    <string-array name="sport_level_array">
        <item>Computer scientist</item>
        <item>Romanist</item>
        <item>Agro</item>
        <item>Physiotherapist</item>
        <item>MAF</item>
        <item>Warrior</item>
    </string-array>
    <string name="cursus_button">Course list</string>
    <string name="stopping_chrono">Service is running !! Stopping</string>
    <string name="TIME_OUT" translatable="false">TIME OUT</string>
    <string name="more_10">More than 10 seconds</string>
    <string name="lack_money">You don\'t have enough money</string>
    <string name="wait_purchase">You must wait between 2 purchases. Still </string>
    <string name="wait_purchase2">before the next.</string>
    <string name="play" translatable="false">Play</string>
    <string name="ade" translatable="false">ADE</string>
    <string name="fb" translatable="false">Facebook</string>
    <string name="save_back">Save and Back</string>
    <string name="log_out">Logout</string>
    <string name="events">List of events</string>
    <string name="autre_cours">Other course (LFSA1106)</string>
    <string name="programme">Program (FSA13BA)</string>
    <string name="majeure">Major (MajInfo13)</string>
    <string name="mineure">Minor (Minmap13)</string>
    <string name="help">Help</string>
    <string-array name="help_main">
        <item>To launch the chrono, press the start/stop button.</item>
        <item>If you wanna take a pause, push the pause button.</item>
        <item>To spend the credit you earned, go to the shop via the store button.</item>
        <item>To check your schedules, push the ADE button if you\'ve already registered courses in the settings.</item>
        <item>If not, go to the setting and type your courses in the Courses list</item>
        <item>To set your sport level, go in the Settings</item>
        <item>To earn Procrastinacoins by moving, go in Sport</item>
    </string-array>
    <string name="log_in">Logging in …</string>
    <string name="event">Event</string>
    <string name="sport_menu" translatable="false">Sport</string>
    <string name="sport_activity" translatable="false">Sport</string>
    <string name="your_sport_level">Your sport level is : </string>
    <string name="goal">Your goal</string>
    <string name="title_activity_graphical_menu" translatable="false">GraphicalMenu</string>
    <string name="sportdelay">Delay between two sport break [min]</string>
    <string name="snooze">Snooze value [min]</string>
    <string name="alpha_numeric_avertissement">Course codes can only contain alpha-numeric characters. Those not corresponding to this rule have not been saved</string>
    <string name="title_activity_dummy_menu" translatable="false">UCLaConcentration</string>
    <string name="menu_style">Graphical menu</string>
    <string name="graphical">Graphical</string>
    <string name="non_graphical">Non-Graphical</string>
    <string name="alerte_sport">It\'s time for a break</string>
    <string name="dialog_sport_1">"You have been studying for "</string>
    <string name="dialog_sport_2">it\'s time to take a break. Take advantage of this to win some Procastinacoins</string>
    <string name="dialog_sport_cancel" translatable="false">Snooze</string>
    <string name="dialog_sport_ok">Let\'s go!!</string>
    <string name="Store_confession">UConfession : 10min</string>
    <string name="Hello_face">Hello</string>
    <string name="credit_menu">Credits</string>
    <string name="credits">This application was developed by Alexis van den Bogaert, Julien Aigret, Nicolas Vanvyve and Sophie Madessis as part of the course LFSAB1509 Project 4 in computer science during the year 2016–17 at Université Catholique de Louvain.</string>
    <string name="UConf" translatable="false">UConfession</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_conf_positive">Go to settings</string>
    <string name="dialog_conf_negative">Back to Store</string>
    <string name="achat">Purchase</string>
    <string name="dialog_conf_message">You are not logged in to Facebook. You will not be able to see the confessions. Go to the settings to log in and go back later, or go back to the Store. No Procastinacoins has been debited yet.</string>
    <string name="dialog_conf_title">Warning</string>
    <string name="dialog_sell_mess_1">"You are about to buy a reward for "</string>
    <string name="dialog_sell_mess_2">By clicking \"</string>
    <string name="dialog_sell_mess_3">\"your balance will be debited and you will not be able to purchase other rewards for a period proportional to the duration of this reward. Press \"</string>
    <string name="dialog_sell_mess_4">\" To return to the Store and cancel your purchase.</string>
    <string name="tuto_next_time">Tuto next restart</string>
    <string name="next">Next</string>
    <string name="give_me_new_position">Give me new position</string>
    <string name="j_y_suis">I\'m there</string>
    <string name="prev">Previous</string>
    <string name="skip">Skip</string>
    <string name="sell_and_mask">"Buy and no longer show me this warning "</string>
    <string name="sell_avert_switch">Purchase warning</string>
    <string name="text_tuto">Press on button and use app</string>
    <string name="swipe">Swipe for tutorial</string>
    <string name="studyTime">Total study time :</string>
    <string name="quit_conf">Be careful, if you leave this page we will not be able to return without going through the Store.</string>
    <string name="app_avert">This application has a purpose only if you impose certain rules. It will not prevent you from opening your PC and going to Facebook ...</string>
    <string name="continuer_a_marcher">Keep Walking</string>
    <string name="encore">More</string>
    <string name="pas_assez_proche">You are not yet close enough.</string>
    <string name="pas_de_cible">You have not yet defined a target. So you can not be there.</string>
    <string name="vous_y_etes">You are there !! Reward:</string>
</resources>