<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ToolBarColor"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/type_of_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:text=""
                    android:textAllCaps="false"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:textAllCaps="false"
                    android:textSize="24sp"/>

            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="30sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/button_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/play"
                    />

                <Button
                    android:id="@+id/button_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/pause"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/button_store"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/button_play"
                android:layout_weight="0.96"
                android:text="@string/title_activity_store"/>

            <Button
                android:id="@+id/ade_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_store"
                android:text="@string/ade"/>


            <Button
                android:id="@+id/event_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event"/>

            <Button
                android:id="@+id/sport_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/connexion_button"
                android:text="@string/sport_menu"/>


        </LinearLayout>
    </ScrollView>

    <!--
    Quelle est la différence entre une Ferrari et un tas de bébés morts ? Il n'y a pas de Ferrari
    dans mon garage ...
    -->

</LinearLayout>